--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,9 @@
     "default_popup": "popup.html"
   },
   "icons": {
-	  "48": "icon48.png",
-      "128": "icon128.png" },
+	"48": "icon48.png",
+	"128": "icon128.png" 
+  },
   "permissions": [
     "activeTab",
 	"tabs"
